# metanion

./: .gitignore  1-coding_patterns.md  2-viral-genes.md  3-deflate.md  4-glyph.md  5-coleuler.md  6-structure.md  7-block-quaternion.md  DESTRUCTIVE_PATTERNS.md  FIXME.md  Makefile  README.md  aspire.py  branch.py  ce1.py  ce1_boundary_primes.py  ce1_fractal_markov_engine.py  ce1_local.py  ce1_metanion.py  ce1_shadow_ops.py  ce1_zeta_field.py  coding_patterns.md  color.py  color_phases.py  deflate.py  deflate.txt  dena.py  emits.py  eonyx.py  family.py  fme_analysis.py  fme_color.py  fme_core.py  fme_core_analysis.md  fme_engine.py  fme_quaternion.py  fme_text_generation.py  fme_tokenization.py  gene_style.py  genome.py  (+33 more)
