[project]
name = "eonyx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bitstring>=4.3.1",
    "isal>=1.7.2",
    "msgpack>=1.1.1",
    "numpy>=2.3.2",
    "scikit-learn>=1.7.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "eonyx",
]

[tool.uv.sources]
eonyx = { workspace = true }
